[package]
name = "kx"
version = "0.1.0"
authors = ["onatm <onatmercan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
skim = "0.7.0"