[package]
name = "kx"
version = "1.2.0"
authors = ["onatm <onatmercan@gmail.com>"]
description = "Interactively switch between kubernetes contexts without any external dependencies"
documentation = "https://github.com/onatm/kx"
homepage = "https://github.com/onatm/kx"
repository = "https://github.com/onatm/kx"
readme = "README.md"
keywords = ["kubernetes", "kubernetes-context"]
license = "MIT"
edition = "2021"
exclude = [
    ".github/*",
    ".vscode/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dirs = "4.0"
skim = "0.10"